--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <div>
      <p>姓名：<span>张欣</span></p>
      <p>身高：<span>172cm</span></p>
-     <p>爱好：<span>172cm</span></p>
+     <p>爱好：<span>运动</span></p>
    </div>
  </body>
 </head>
