添加喜欢的明星

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
      <p>身高：<span>172cm</span></p>
      <p>爱好：<span>运动</span></p>
      <p>喜欢的动物：<span>猫</span></p>
+     <p>喜欢的明星：<span>猫</span></p>
    </div>
  </body>
 </head>
