--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
      <p>身高：<span>172cm</span></p>
      <p>爱好：<span>运动</span></p>
      <p>喜欢的动物：<span>谢娜 吴昕</span></p>
+     <p>喜欢的鲜花：</p>
    </div>
  </body>
 </head>
