--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
      <p>姓名：<span>张欣</span></p>
      <p>身高：<span>172cm</span></p>
      <p>爱好：<span>运动</span></p>
-     <p>喜欢的动物：<span>谢娜 吴昕</span></p>
-     <p>喜欢的鲜花：</p>
+     <p>喜欢的明星：<span>谢娜 吴昕</span></p>
    </div>
  </body>
 </head>
