添加音乐信息

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ aaaa
      <p>姓名：<span>张欣</span></p>
      <p>身高：<span>172cm</span></p>
      <p>爱好：<span>运动</span></p>
-     <p>喜欢的动物：<span>谢娜 吴昕</span></p>
+     <p>喜欢的明星：<span>谢娜 吴昕</span></p>
+     <p>喜欢的音乐：<span>张杰的《最美的太阳》</span></p>
    </div>
     我是。。。。。
    ccccc 
