--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-aaaa
-
 <!DOCTYPE html>
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -11,11 +9,9 @@ aaaa
      <p>爱好：<span>运动</span></p>
      <p>喜欢的明星：<span>谢娜 吴昕</span></p>
      <p>喜欢的音乐：<span>张杰的《最美的太阳》</span></p>
+     <p>喜欢的动画：<span>《魔卡少女樱》</span></p>
    </div>
     我是。。。。。
    ccccc 
-
  </body>
 </head>
-
-bbbb
