--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
      <p>喜欢的明星：<span>谢娜 吴昕</span></p>
      <p>喜欢的音乐：<span>张杰的《最美的太阳》</span></p>
      <p>喜欢的动画：<span>《魔卡少女樱》</span></p>
+     我喜欢木之本樱！
    </div>
-    我是。。。。。
    ccccc 
  </body>
 </head>
